[tool.poetry]
name = "code-stats"
version = "0.1.0"
description = ""
authors = ["Bjodol <bjorn.dolvik@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.2"
spotipy = "^2.12.0"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
